implemented new latest terraform backend endpoint
