# plugins/terraform-backend/src/schema/openapi.yaml
@@ -41,6 +41,30 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/run'
+  '/organizations/{orgName}/workspaces/{workspaceName}/latestRun':
+    get:
+      description: Returns data about the most recent Terraform Run
+      operationId: getLatestRun
+      parameters:
+        - name: orgName
+          in: path
+          description: Name of organization for which to return the latest run
+          required: true
+          schema:
+            type: string
+        - name: workspaceName
+          in: path
+          description: Name of workspace for which to return the latest run
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/latestRun'
 components:
   schemas:
     health:
@@ -80,3 +104,31 @@ components:
             properties:
               logs:
                 type: string
+    latestRun:
+      title: Terraform Latest Run
+      description: Description of the latest terraform run
+      type: object
+      properties:
+        id:
+          type: string
+        message:
+          type: string
+          nullable: true
+        status:
+          type: string
+        createdAt:
+          type: string
+        confirmedBy:
+          type: object
+          nullable: true
+          properties:
+            user:
+              type: string
+            avatar:
+              type: string
+        plan:
+          type: object
+          nullable: true
+          properties:
+            logs:
+              type: string
